[gd_scene load_steps=27 format=3 uid="uid://d25rdiau8ito5"]

[ext_resource type="Script" path="res://scripts/UI/fight_ui.gd" id="1_fhe66"]
[ext_resource type="Texture2D" uid="uid://b2pmoyyn33jjs" path="res://assets/ui/fight_ui/menu_foundation.png" id="2_bcqcl"]
[ext_resource type="PackedScene" uid="uid://cje0ll6pwd5yp" path="res://scenes/character_display.tscn" id="3_4n8ts"]
[ext_resource type="Script" path="res://scripts/UI/enemies_display.gd" id="5_subih"]
[ext_resource type="Texture2D" uid="uid://24c2etikrbk5" path="res://assets/enemies/monster_01.png" id="6_e1ypk"]
[ext_resource type="FontFile" uid="uid://chxj0wt4i4epv" path="res://assets/fonts/lato/Lato-Regular.ttf" id="6_gjri0"]
[ext_resource type="Texture2D" uid="uid://ckxik8lsk2na5" path="res://assets/ui/party_ui/rect_frame.png" id="6_h7irw"]
[ext_resource type="Texture2D" uid="uid://fslr5mbjwe8i" path="res://assets/ui/fight_ui/red_square_button_un.png" id="7_46l7a"]
[ext_resource type="Texture2D" uid="uid://c0lna5hhs37mm" path="res://assets/ui/menu_ui/box_heading_reaper_left.png" id="7_uhvgr"]
[ext_resource type="Texture2D" uid="uid://hen2oq5a7eox" path="res://assets/ui/menu_ui/box_heading_reaper_right.png" id="8_saijr"]
[ext_resource type="Texture2D" uid="uid://dh64l2aiuua2i" path="res://assets/ui/fight_ui/red_square_button_h.png" id="8_ybgqt"]
[ext_resource type="Texture2D" uid="uid://qaqr2ks5kf6f" path="res://assets/ui/fight_ui/description_texture.png" id="9_rwa88"]
[ext_resource type="Texture2D" uid="uid://bif1amwq6bxy7" path="res://assets/ui/menu_ui/box_heading_midsec_repeat.png" id="9_y56ro"]
[ext_resource type="Texture2D" uid="uid://ctbvwknltdyh6" path="res://assets/ui/menu_ui/box_head_pattern_repeatable.png" id="10_5q8w6"]
[ext_resource type="Texture2D" uid="uid://c4winy4h5qjb5" path="res://assets/ui/menu_ui/Box Borders/bottom_border_left_cap.png" id="11_rdvbw"]
[ext_resource type="Texture2D" uid="uid://dyk3kfoj7vbcu" path="res://assets/ui/menu_ui/Box Borders/left_border_top_cap.png" id="12_703vx"]
[ext_resource type="Texture2D" uid="uid://chv3fk35lrax7" path="res://assets/ui/menu_ui/Box Borders/left_border_repeat_vertical.png" id="13_urlir"]
[ext_resource type="Texture2D" uid="uid://62kll5a67er" path="res://assets/ui/menu_ui/Box Borders/bottom_border_right_cap.png" id="14_otp32"]
[ext_resource type="Texture2D" uid="uid://fl75hrwyp5te" path="res://assets/ui/menu_ui/Box Borders/right_border_top_cap.png" id="15_bewba"]
[ext_resource type="Texture2D" uid="uid://b33r0uq86r7wh" path="res://assets/ui/menu_ui/Box Borders/right_border_repeat_vertical.png" id="16_7qw21"]
[ext_resource type="Texture2D" uid="uid://2vfdpjf4u6dj" path="res://assets/ui/menu_ui/Box Borders/bottom_border_midsec_repeat_horizontal.png" id="17_g6hh2"]
[ext_resource type="Texture2D" uid="uid://bxyo6htxdl7o5" path="res://assets/ui/fight_ui/menu_heading_smaller.png" id="18_bkmp0"]
[ext_resource type="FontFile" uid="uid://cqreiydojq74a" path="res://assets/fonts/playfair/PlayfairDisplay-Black.ttf" id="19_vvif5"]

[sub_resource type="LabelSettings" id="LabelSettings_qsvt1"]
font = ExtResource("6_gjri0")
font_size = 24
font_color = Color(0.717647, 0.678431, 0.662745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_v40v7"]
font = ExtResource("6_gjri0")
font_size = 32
font_color = Color(0.717647, 0.678431, 0.662745, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y52tr"]
font = ExtResource("19_vvif5")
font_size = 56
font_color = Color(0.716841, 0.678761, 0.662312, 1)

[node name="fight_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhe66")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -921.0
offset_top = -537.0
offset_right = 927.0
offset_bottom = 537.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="bg" type="TextureRect" parent="bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -829.0
offset_top = -398.0
offset_right = 826.0
offset_bottom = 499.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bcqcl")
expand_mode = 1

[node name="party_display" type="Control" parent="bg/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_character_display" parent="bg/bg/party_display" instance=ExtResource("3_4n8ts")]
layout_mode = 1
offset_left = -764.5
offset_top = -343.0
offset_right = -214.5
offset_bottom = -183.0
show_delete_button = false

[node name="class_badge" parent="bg/bg/party_display/main_character_display/infos" index="1"]
offset_top = -1.67743
offset_bottom = 88.3226

[node name="delete_button" parent="bg/bg/party_display/main_character_display" index="2"]
visible = false
disabled = true

[node name="character_display2" parent="bg/bg/party_display" instance=ExtResource("3_4n8ts")]
layout_mode = 1
offset_left = -764.5
offset_top = -170.0
offset_right = -214.5
offset_bottom = -10.0
show_delete_button = false
character_xp = 1
character_portrait = 17

[node name="character_display3" parent="bg/bg/party_display" instance=ExtResource("3_4n8ts")]
layout_mode = 1
offset_left = -764.5
offset_top = 4.0
offset_right = -214.5
offset_bottom = 164.0
show_delete_button = false
character_xp = 6
character_portrait = 16

[node name="character_display4" parent="bg/bg/party_display" instance=ExtResource("3_4n8ts")]
layout_mode = 1
offset_left = -764.5
offset_top = 184.0
offset_right = -214.5
offset_bottom = 344.0
show_delete_button = false
character_class = "Mage"
character_xp = 600
character_portrait = 19

[node name="enemies_display" type="Control" parent="bg/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_subih")
enemy_class = "None"

[node name="avatar_background" type="ColorRect" parent="bg/bg/enemies_display"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = -148.0
offset_right = 512.0
offset_bottom = 108.0
grow_vertical = 2
color = Color(0.509804, 0.313726, 0.160784, 1)

[node name="avatar_portrait" type="TextureRect" parent="bg/bg/enemies_display/avatar_background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_e1ypk")
flip_h = true

[node name="frame" type="TextureRect" parent="bg/bg/enemies_display/avatar_background"]
offset_left = -11.0
offset_top = -10.0
offset_right = 278.0
offset_bottom = 269.0
texture = ExtResource("6_h7irw")

[node name="enemy_description" type="Label" parent="bg/bg/enemies_display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 480.0
offset_top = -75.0
offset_right = 760.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
text = "2 Mountain Drake
 Lvl : 1"
label_settings = SubResource("LabelSettings_qsvt1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="simulation_button" type="Button" parent="bg/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -32.5
offset_right = 128.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
text = "Simulate"
icon = ExtResource("7_46l7a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="fight_button" type="Button" parent="bg/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -110.0
offset_right = 128.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
text = "Fight"
icon = ExtResource("7_46l7a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="flee_button" type="Button" parent="bg/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = 47.0
offset_right = 128.5
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
text = "Flee"
icon = ExtResource("7_46l7a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="proceed_button" type="Button" parent="bg/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 198.0
offset_right = 128.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
text = "Proceed"
icon = ExtResource("8_ybgqt")
flat = true
icon_alignment = 1
expand_icon = true

[node name="result_label" type="Label" parent="bg/bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = 130.5
offset_right = 138.0
offset_bottom = 191.5
grow_horizontal = 2
grow_vertical = 2
text = "Success !"
label_settings = SubResource("LabelSettings_v40v7")
horizontal_alignment = 1
autowrap_mode = 2

[node name="chances_bg" type="TextureRect" parent="bg/bg"]
layout_mode = 0
offset_left = 655.0
offset_top = 184.0
offset_right = 1009.0
offset_bottom = 273.0
texture = ExtResource("9_rwa88")
expand_mode = 5

[node name="chances_label" type="Label" parent="bg/bg/chances_bg"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -21.5
offset_right = 155.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
text = "Victory Chances : 98%"
label_settings = SubResource("LabelSettings_v40v7")
horizontal_alignment = 1

[node name="border" type="Control" parent="bg"]
layout_mode = 3
anchors_preset = 0
offset_top = -99.0
offset_right = 40.0
offset_bottom = -59.0

[node name="upper_banner" type="Control" parent="bg/border"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="head_left" type="TextureRect" parent="bg/border/upper_banner"]
layout_mode = 0
offset_left = -23.0
offset_top = 104.0
offset_right = 191.0
offset_bottom = 318.0
texture = ExtResource("7_uhvgr")

[node name="head_right" type="TextureRect" parent="bg/border/upper_banner"]
layout_mode = 0
offset_left = 1625.0
offset_top = 104.0
offset_right = 1839.0
offset_bottom = 318.0
texture = ExtResource("8_saijr")

[node name="borders_up" type="TextureRect" parent="bg/border/upper_banner"]
layout_mode = 0
offset_left = 190.0
offset_top = 162.0
offset_right = 1630.0
offset_bottom = 318.0
texture = ExtResource("9_y56ro")
expand_mode = 1
stretch_mode = 1

[node name="up" type="TextureRect" parent="bg/border/upper_banner/borders_up"]
layout_mode = 0
offset_left = -5.0
offset_top = 12.0
offset_right = 1444.0
offset_bottom = 145.0
texture = ExtResource("10_5q8w6")
stretch_mode = 1

[node name="left_column" type="Control" parent="bg/border"]
anchors_preset = 0
offset_left = -49.0
offset_top = -15.0
offset_right = -9.0
offset_bottom = 25.0

[node name="left_bottom_corner" type="TextureRect" parent="bg/border/left_column"]
layout_mode = 0
offset_left = 108.0
offset_top = 1109.0
offset_right = 363.0
offset_bottom = 1156.0
texture = ExtResource("11_rdvbw")

[node name="left_up_corner" type="TextureRect" parent="bg/border/left_column"]
layout_mode = 0
offset_left = 112.0
offset_top = 332.0
offset_right = 162.0
offset_bottom = 371.0
texture = ExtResource("12_703vx")

[node name="left_part" type="TextureRect" parent="bg/border/left_column"]
layout_mode = 0
offset_left = 138.0
offset_top = 371.0
offset_right = 162.0
offset_bottom = 1109.0
texture = ExtResource("13_urlir")
stretch_mode = 1

[node name="right_column" type="Control" parent="bg/border"]
anchors_preset = 0
offset_left = 1603.0
offset_top = -17.0
offset_right = 1643.0
offset_bottom = 23.0

[node name="right_bottom_corner" type="TextureRect" parent="bg/border/right_column"]
layout_mode = 0
offset_left = -75.0
offset_top = 1111.0
offset_right = 180.0
offset_bottom = 1158.0
texture = ExtResource("14_otp32")

[node name="right_up_corner" type="TextureRect" parent="bg/border/right_column"]
layout_mode = 0
offset_left = 125.0
offset_top = 332.0
offset_right = 175.0
offset_bottom = 371.0
texture = ExtResource("15_bewba")

[node name="right_part" type="TextureRect" parent="bg/border/right_column"]
layout_mode = 0
offset_left = 125.0
offset_top = 370.0
offset_right = 149.0
offset_bottom = 1111.0
texture = ExtResource("16_7qw21")
stretch_mode = 1

[node name="bottom_part" type="TextureRect" parent="bg/border"]
layout_mode = 0
offset_left = 308.0
offset_top = 1094.0
offset_right = 1537.0
offset_bottom = 1141.0
texture = ExtResource("17_g6hh2")
stretch_mode = 1

[node name="UI_title" type="TextureRect" parent="bg"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -172.0
offset_top = 37.0
offset_right = 179.0
offset_bottom = 181.0
grow_horizontal = 2
texture = ExtResource("18_bkmp0")
expand_mode = 1

[node name="Title" type="Label" parent="bg/UI_title"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -56.0
offset_right = 142.5
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
text = "Fight"
label_settings = SubResource("LabelSettings_y52tr")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[editable path="bg/bg/party_display/main_character_display"]
